# python-environments

./: .gitignore  .readthedocs.yml  README.md  environments.toml  genindex.html  index.html  meson.build  meson_options.txt  objects.inv  py-modindex.html  pyproject.toml  python-package.html  search.html  searchindex.js
.github/workflows/: build.yml  docs.yml  release.yml  requirements.txt
LICENSES/: MIT.txt
_sources/: image-data.rst.txt  index.rst.txt
_static/: documentation_options.js
_static/css/: fix-table-layout.css  highlight-margin.css
containers/: __init__.py  build.py  concurrent.py  config.py  env.py  image.py  ops.py  repo.py  template.py
containers/templates/alpine/: Dockerfile.jinja
containers/templates/archlinux/: Dockerfile.jinja
containers/templates/debian/: Dockerfile.jinja
containers/templates/fedora/: Dockerfile.jinja
docs/: conf.py  index.rst  python-package.rst
docs/_static/css/: datadetails-style.css  fix-pre-overflow.css
docs/extensions/: local_project_info.py
python/: fetch-data.py  generate-data.py  meson.build
python/python_environments/: __init__.py  _init.py  generate.py
tests/: test_data.py
